--- a/client/src/app/board/components/board/board.component.html
+++ b/client/src/app/board/components/board/board.component.html
@@ -5,15 +5,17 @@
   <div class="columns">
     <div class="column" *ngFor="let column of data.columns">
       <div class="column-title">{{ column.title }}</div>
+
+
+      <div class="tasks">
+        <div *ngFor="let task of column?.tasks" class="task">
+          <div class="task-title">{{ task.title }}</div>
+        </div>
+        <el-inline-form class="create-column-form" defaultText="Add a task" [hasButton]="true" buttonText="Add task"
+        inputPlaceholder="Add task name" (handleSubmit)="createTask($event, column.id)"></el-inline-form>
+      </div>
     </div>
-    <el-inline-form
-      class="create-column-form"
-      defaultText="Add a list"
-      [hasButton]="true"
-      buttonText="Add list"
-      inputPlaceholder="Add column name"
-      (handleSubmit)="createColumn($event)"
-    ></el-inline-form>
+    <el-inline-form class="create-column-form" defaultText="Add a list" [hasButton]="true" buttonText="Add list"
+      inputPlaceholder="Add column name" (handleSubmit)="createColumn($event)"></el-inline-form>
   </div>
 </div>
-
