--- a/client/src/app/board/components/board/board.component.html
+++ b/client/src/app/board/components/board/board.component.html
@@ -1,9 +1,8 @@
 <el-topbar></el-topbar>
 
 <div class="board" *ngIf="data$ | async as data">
-  <div class="board-header-container">INLINE FORM BOARD</div>
-  <div class="columns">
-    <div class="column" *ngFor="let column of data.columns">
+  <div class="columns" cdkDropList  [cdkDropListData]="data.columns" (cdkDropListDropped)="changeColumnPosition($event)" cdkDropListOrientation="horizontal">
+    <div class="column" *ngFor="let column of data.columns" cdkDrag cdkDragLockAxis="x" [cdkDragData]="column">
       <div class="column-title">{{ column.title }}</div>
 
 
@@ -12,7 +11,7 @@
           <div class="task-title">{{ task.title }}</div>
         </div>
         <el-inline-form class="create-column-form" defaultText="Add a task" [hasButton]="true" buttonText="Add task"
-        inputPlaceholder="Add task name" (handleSubmit)="createTask($event, column.id)"></el-inline-form>
+          inputPlaceholder="Add task name" (handleSubmit)="createTask($event, column.id)"></el-inline-form>
       </div>
     </div>
     <el-inline-form class="create-column-form" defaultText="Add a list" [hasButton]="true" buttonText="Add list"
