[Feat] Test Change to GitLab

--- a/client/src/app/home/components/home/home.component.html
+++ b/client/src/app/home/components/home/home.component.html
@@ -16,7 +16,7 @@
         </h1>
         <p class="home-description">
           Trello’s boards, lists, and cards enable teams to organize and
-          prioritize projects in a fun, flexible, and rewarding way.
+          prioritize projects in a fun and flexible way.
         </p>
       </div>
       <div>
