--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,14 +1,13 @@
-@import './styles/reset.css';
-@import './styles/global.css';
-@import './styles/login.css';
-@import './styles/boards.css';
-@import './styles/board.css';
-@import './styles/topbar.css';
-@import './styles/createBoard.css';
-@import './styles/createColumn.css';
-@import './styles/createTask.css';
-@import './styles/home.css';
-@import './styles/editBoardForm.css';
-@import './styles/taskModal.css';
-@import './styles/columnSelect.css';
+@import './styles/reset';
+@import './styles/global';
+@import './styles/mixins';
 
+:root {
+    --header-height: 45px;
+    --z-index9999: 9999;
+    --container-padding: 6px;
+    --main-background-color: #fafafa;
+    --secondary-background-color: #ffffff;
+    --shadow-color: #cfcfcf;
+    --transition-time: 0.2s;
+}  
