feat: Empty State

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<section class="home">
+    <nav class="home__navigation">
+        <el-topbar></el-topbar>
+        <el-sidebar></el-sidebar>
+    </nav>
+    <main class="home__container">
+        <router-outlet></router-outlet>
+    </main>
+</section>
