--- a/client/src/app/shared/components/topbar/topbar.component.scss
+++ b/client/src/app/shared/components/topbar/topbar.component.scss
@@ -11,6 +11,7 @@
     width: 100%;
 
     padding: var(--container-padding);
+    padding-right: 24px;
     background-color: var(--secondary-background-color);
     box-shadow: 0 2px 13px var(--shadow-color);
 
