--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -4,10 +4,71 @@
 
 :root {
     --header-height: 45px;
+    --title-size: 34px;
+    --h2-size: 24px;
+    --h4-size: 18px;
     --z-index9999: 9999;
     --container-padding: 6px;
     --main-background-color: #fafafa;
     --secondary-background-color: #ffffff;
     --shadow-color: #cfcfcf;
     --transition-time: 0.2s;
+
+    --primary: #1F2F60;
+    --primary-2: #242CA4;
+    --primary-3: #0086FF;
+    --accent: #D0123C;
+    --static-black: #000000;
+    --static-white: #ffffff;
+    --static-gray-20: #d4d4d4;
+    --yellow-25: #FBF9E4;
+    --yellow-100: #DC8911;
+    --green-25: #E4FBEA;
+    --green-100: #3C763D;
+    --primary-10: #f1f2f7;
+    --primary-20: #d6d8e6;
+    --primary-30: #adb1cd;
+    --primary-40: #848ab4;
+    --primary-50: #5c669a;
+    --primary-60: #334d81;
+    --primary-70: #2e448e;
+    --primary-80: #273b7b;
+    --primary-90: #213269;
+    --primary-100: #1a2956;
+    --primary-gradient: linear-gradient(160deg, #2828ea 0%, #1f2f60 100%);
+    --accent-10: #f7e8eb;
+    --accent-20: #eab3be;
+    --accent-30: #de7e91;
+    --accent-40: #d24964;
+    --accent-50: #c1233d;
+    --accent-60: #ad1d36;
+    --accent-70: #9b1a30;
+    --accent-80: #881727;
+    --accent-90: #760f20;
+    --accent-100: #640c1a;
+    --shadow-default-1: 0px 16px 20px rgba(0, 0, 0, 0.08), 0px 4px 10px rgba(0, 0, 0, 0.08);
+    --cool-gray-00: #f5f5f5;
+    --cool-gray-10: #eaeaea;
+    --cool-gray-20: #d4d4d4;
+    --cool-gray-30: #bebebe;
+    --cool-gray-40: #a9a9a9;
+    --cool-gray-50: #949494;
+    --cool-gray-60: #7e7e7e;
+    --cool-gray-70: #696969;
+    --cool-gray-80: #535353;
+    --cool-gray-90: #3d3d3d;
+    --cool-gray-100: #282828;
+    --inverted-cool-gray-00: #1f1f1f;
+    --inverted-cool-gray-10: #2e2e2e;
+    --inverted-cool-gray-20: #3d3d3d;
+    --inverted-cool-gray-30: #4c4c4c;
+    --inverted-cool-gray-40: #5b5b5b;
+    --inverted-cool-gray-50: #6b6b6b;
+    --inverted-cool-gray-60: #7a7a7a;
+    --inverted-cool-gray-70: #898989;
+    --inverted-cool-gray-80: #989898;
+    --inverted-cool-gray-90: #a7a7a7;
+    --inverted-cool-gray-100: #b6b6b6;
+    --skeleton-loader-1: rgba(240, 240, 240, 0.5);
+    --skeleton-loader-2: 
 }  
