feat: Redesign Board Page

--- a/client/src/app/boards/components/boards-empty/boards-empty.component.html
+++ b/client/src/app/boards/components/boards-empty/boards-empty.component.html
@@ -4,5 +4,5 @@
     <h2 class="boards-empty__text">You don't have any new boards</h2>
     <h4 class="boards-empty__text--subtitle">To start interacting, please create new board</h4>
 
-    <button class="boards-empty__button" type="button">Create new</button>
+    <button class="boards-empty__button" (click)="createNewBoard()" type="button">Create new</button>
 </section>
