--- a/client/src/app/shared/components/topbar/topbar.component.html
+++ b/client/src/app/shared/components/topbar/topbar.component.html
@@ -1,6 +1,7 @@
 <div class="topbar">
     <div class="topbar__icons-wrapper">
         <img class="icon-settings" src="/assets/navigation/settings.svg" alt="settings" title="settings">
-        <img src="/assets/navigation/profile.svg" alt="profile" title="profile">
+
+        <div class="icon-profile">{{ userInitial() }}</div>
     </div>
 </div>
