--- a/client/src/app/shared/components/topbar/topbar.component.html
+++ b/client/src/app/shared/components/topbar/topbar.component.html
@@ -1,7 +1,9 @@
 <div class="topbar">
-    <div class="topbar__icons-wrapper">
-        <img class="icon-settings" src="/assets/navigation/settings.svg" alt="settings" title="settings">
-
-        <div class="icon-profile">{{ userInitial() }}</div>
-    </div>
+    @if (userInitial()) {
+        <div class="topbar__icons-wrapper">
+            <img class="icon-settings" src="/assets/navigation/settings.svg" alt="settings" title="settings">
+    
+            <div class="icon-profile">{{ userInitial() }}</div>
+        </div>
+    }
 </div>
