--- a/client/src/app/shared/components/sidebar/sidebar.component.html
+++ b/client/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,4 +1,7 @@
 <div class="sidebar">
     <img [routerLink]="['/boards']" [routerLinkActive]="['is-active']" class="sidebar__logo" src="/assets/navigation/trello.svg" alt="logo" title="logo">
-    <img (click)="logout()" class="sidebar__logout" src="/assets/navigation/logout.svg" alt="logout" title="logout">
+
+    @if (user()) {
+        <img (click)="logout()" class="sidebar__logout" src="/assets/navigation/logout.svg" alt="logout" title="logout">
+    }
 </div>
